--- a/src/main/webapp/WEB-INF/views/books/allBookPages.html
+++ b/src/main/webapp/WEB-INF/views/books/allBookPages.html
@@ -7,8 +7,8 @@
 <body>
 
 <div th:each="book : ${books}">
-  <a th:href="@{/books/{id} (id=${book.getBook_id()})}"
-     th:text="${book.getName()+ ', ' + book.getAuthor() + ', ' + book.getYearOfProduction()}">BN</a>
+  <a th:href="@{/books/{id} (id=${book.getId()})}"
+     th:text="${book.getTitle()+ ', ' + book.getAuthor() + ', ' + book.getYear()}">BN</a>
 </div>
 <br/>
 <hr/>
