--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -6,22 +6,22 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/books/{id} (id=${book.getBook_id()})}"
+<form th:method="PATCH" th:action="@{/books/{id} (id=${book.getId()})}"
       th:object="${book}";>
-  <label for="name">Введите название книги: </label>
-  <input type="text" th:field="*{name}" id="name"/>
-  <div style="color:red" th:if="${#fields.hasErrors('name')}"
-       th:errors="*{name}">Name errors</div>
+  <label for="title">Введите название книги: </label>
+  <input type="text" th:field="*{title}" id="title"/>
+  <div style="color:red" th:if="${#fields.hasErrors('title')}"
+       th:errors="*{title}">Name errors</div>
   <br/>
   <label for="author">Введите автора: </label>
   <input type="text" th:field="*{author}" id="author"/>
   <div style="color:red" th:if="${#fields.hasErrors('author')}"
        th:errors="*{author}">author errors</div>
   <br/>
-  <label for="yearOfProduction">Введите год: </label>
-  <input type="text" th:field="*{yearOfProduction}" id="yearOfProduction"/>
-  <div style="color:red" th:if="${#fields.hasErrors('yearOfProduction')}"
-       th:errors="*{yearOfProduction}">yearOfProduction errors</div>
+  <label for="year">Введите год: </label>
+  <input type="text" th:field="*{year}" id="year"/>
+  <div style="color:red" th:if="${#fields.hasErrors('year')}"
+       th:errors="*{year}">Year errors</div>
   <br/>
   <input type="submit" value="Редактировать!">
 
