--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -6,21 +6,16 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/people/{id} (id=${person.getPerson_id()})}"
-      th:object="${person}";>
-  <label for="name">Введите ФИО: </label>
-  <input type="text" th:field="*{name}" id="name"/>
-  <div style="color:red" th:if="${#fields.hasErrors('name')}"
-       th:errors="*{name}">Name errors</div>
+<form th:method="PATCH" th:action="@{/people/{id} (id=${person.getId()})}" th:object="${person}";>
+  <label for="fullName">Введите ФИО: </label>
+  <input type="text" th:field="*{fullName}" id="fullName"/>
+  <div style="color:red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name errors</div>
   <br/>
   <label for="yearOfBirth">Введите год рождения: </label>
   <input type="text" th:field="*{yearOfBirth}" id="yearOfBirth"/>
-  <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}"
-       th:errors="*{yearOfBirth}">Name errors</div>
+  <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Name errors</div>
   <br/>
   <input type="submit" value="Редактировать!">
-
-
 </form>
 
 </body>
