--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -7,11 +7,11 @@
 <body>
 
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
-  <label for="name">Введите имя: </label>
-  <input type="text" th:field="*{name}" id="name"/>
-  <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name errors</div>
+  <label for="name">Введите ФИО: </label>
+  <input type="text" th:field="*{fullName}" id="name"/>
+  <div style="color:red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Name errors</div>
   <br/>
-  <label for="yearOfBirth">Введите год: </label>
+  <label for="yearOfBirth">Введите год рождения: </label>
   <input type="text" th:field="*{yearOfBirth}" id="yearOfBirth"/>
   <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Year errors</div>
   <br/>
