Total switching of Project1 to Spring Data JPA

--- a/src/main/webapp/WEB-INF/views/people/onePerson.html
+++ b/src/main/webapp/WEB-INF/views/people/onePerson.html
@@ -17,7 +17,7 @@
     <b>Книги:</b>
     <br/>
     <table th:each="book : ${books}">
-        <p th:text="${book.getTitle()+', '+book.getAuthor()+', '+book.getYear()}">Book name</p>
+        <tr th:text="${book.getTitle()+', '+book.getAuthor()+', '+book.getYear()}">Book name</tr>
     </table>
     <hr/>
 </div>
