Added a delay check

--- a/src/main/webapp/WEB-INF/views/books/allBookPages.html
+++ b/src/main/webapp/WEB-INF/views/books/allBookPages.html
@@ -29,6 +29,8 @@
 <a href="/books/new">Добавить книгу</a>
 <br/>
 <a href="/people">Все люди</a>
+<br/>
+<a href="/books/search">Искать книгу</a>
 
 </body>
 </html>
