--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -7,7 +7,7 @@
 <body>
 
 <form th:method="PATCH" th:action="@{/books/{id} (id=${book.getId()})}"
-      th:object="${book}";>
+      th:object="${book}">
   <label for="title">Введите название книги: </label>
   <input type="text" th:field="*{title}" id="title"/>
   <div style="color:red" th:if="${#fields.hasErrors('title')}"
